# rc700-clean-room-bios

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
.claude/projects/-Users-ravn-git-rc700-cleanroom-bios/memory/: MEMORY.md  feedback_concise.md  feedback_mame_skip_gameinfo.md  feedback_no_lua_port_read.md  feedback_use_docker.md  project_status.md
bugs/sdcc-shift-param/: README.md  bug  bug.c
cpm/: bdos.asm  bdos2.asm  ccp.asm
cpm/zout/: bdos2.250.cas  bdos2.ams  bdos2.bds  bdos2.cim  bdos2.cmd  bdos2.mds  bdos2.tap  ccp.1500.cas  ccp.250.cas  ccp.500.cas  ccp.ams  ccp.bds  ccp.cim  ccp.cmd  ccp.mds  ccp.tap
disks/: SW1711-I8.imd
docs/: ANSWERS.md  upd765.txt
memory/: MEMORY.md  feedback_autonomous.md  feedback_byte_word_types.md  feedback_commit_workflow.md  feedback_global_vars.md  feedback_im2_page_boundary.md  feedback_memory_location.md  feedback_no_home_search.md  feedback_plans_in_project.md  project_compiler_findings.md  project_goal.md  project_size_constraint.md  reference_cpm_layout.md  reference_emulators.md  reference_github_repo.md
scripts/: make-disk.py  mame-trace.lua  z80-build.sh  z80-ticks.sh
src/: CMakeLists.txt  chartab.c  chartab.h  config.c  config.h  console.c  console.h  crt0.asm  deblock.c  deblock.h  dpb.c  dpb.h  floppy.c  floppy.h  hal.h  hal_z80.c  hwinit.c  hwinit.h  interrupt.c  interrupt.h  iobyte.c  iobyte.h  jtvars.c  jtvars.h  loader.asm  main.c  ringbuf.c  ringbuf.h  sector.c  sector.h  serial.c  serial.h  types.h
tasks/: plan.md
test/: CMakeLists.txt  fdc_imd_adapter.c  fdc_imd_adapter.h  fdc_sim.c  fdc_sim.h  hal_mock.c  hal_mock.h  imd.c  imd.h  test_chartab.c  test_config.c  test_console.c  test_deblock.c  test_dpb.c  test_fdc_sim.c  test_floppy.c  test_hwinit.c  test_imd.c  test_interrupt.c  test_iobyte.c  test_jtvars.c  test_ringbuf.c  test_sector.c  test_serial.c  test_warmboot.c
